--- a/style.css
+++ b/style.css
@@ -21,6 +21,10 @@
     background: #DB4444;
 }
 
+.btn:hover {
+    cursor: pointer;
+}
+
 p {
     font-family: "Poppins", sans-serif;
     font-size: 14px;
@@ -73,11 +77,22 @@ h4 {
 
 }
 
+h5 {
+    color: #000;
+
+    font-family: "Poppins", sans-serif;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: 28px;
+    /* 140% */
+}
+
 h6 {
     color: #000;
     -webkit-text-stroke-width: 1;
     -webkit-text-stroke-color: #000;
-    font-family: Inter;
+    font-family: "Inter", sans-serif;
     font-size: 32px;
     font-style: normal;
     font-weight: 700;
@@ -99,6 +114,7 @@ a {
     width: 100%;
     max-width: 1170px;
     margin: 0 auto;
+   
 }
 
 
@@ -224,6 +240,10 @@ a {
 
 .user-menu img {
     display: block;
+}
+
+.user-menu img:hover{
+    transform: scale(1.2);
 }
 
 
@@ -461,16 +481,61 @@ swiper-slide img {
     margin-bottom: 60px;
 }
 
-.flash-sales-carousel swiper-slide, .best-selling-carousel swiper-slide{
+.flash-sales-carousel swiper-slide,
+.best-selling-carousel swiper-slide,
+.products-carousel swiper-slide {
     background-color: transparent;
     width: 270px;
+    height: auto;
 }
 
 
 .item-card {
     max-width: 270px;
+    padding: 5px;
+    border-radius: 4px;
+    transition: box-shadow 0.2s ease-in-out;
+}
+
+.item-card:hover {
+    cursor: pointer;
+
 
 }
+
+.item-card:hover .add-to-cart {
+    display: block;
+
+}
+
+
+.add-to-cart {
+    position: absolute;
+    display: block;
+    width: 100%;
+    bottom: 0;
+    left: 0;
+    height: 41px;
+    border: none;
+    background-color: #000;
+    color: #FAFAFA;
+    border-radius: 0px 0px 4px 4px;
+    color: #FFF;
+
+    /* Title/16PX Medium */
+    font-family: "Poppins", sans-serif;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 24px;
+    display: none;
+
+}
+
+.add-to-cart:hover {
+    cursor: pointer;
+}
+
 
 .item-card .item-img {
     width: 190px;
@@ -524,6 +589,12 @@ swiper-slide img {
     right: 12px;
 }
 
+.fill-eye:hover,
+.fill-heart:hover {
+    cursor: pointer;
+    transform: scale(1.2);
+}
+
 .fill-eye {
     top: 54px;
 }
@@ -547,7 +618,7 @@ swiper-slide img {
 
 .categories-section {
     margin-top: 80px;
-    
+
 }
 
 .categories-section .inner-heading {
@@ -570,6 +641,11 @@ swiper-slide img {
     height: 96px;
     border-radius: 4px;
     border: 1px solid rgba(0, 0, 0, 0.30);
+    
+}
+
+.categories-carousel .category-item:hover{
+    background-color: var(--secondary-color);
 }
 
 .categories-carousel .category-item img {
@@ -600,22 +676,329 @@ swiper-slide img {
     /* 150% */
 }
 
-.categories-carousel .category-item .svg-color{
-    stroke: #FAFAFA;
-}
 
-.this-month{
+
+.this-month {
     margin-top: 70px;
 }
 
-.this-month .inner-heading{
+.this-month .inner-heading {
     justify-content: space-between;
 }
 
-.best-selling-carousel{
+.best-selling-carousel {
     margin-top: 60px;
     margin-bottom: 140px;
 }
+
+
+.this-month .container .banner {
+    width: 100%;
+    height: auto;
+    position: relative;
+}
+
+.banner img {
+    width: 100%;
+    height: auto;
+}
+
+.banner-content {
+    position: absolute;
+    top: 69px;
+    left: 56px;
+    display: flex;
+    flex-direction: column;
+    gap: 32px;
+}
+
+.banner-content h2 {
+    color: #0F6;
+
+}
+
+.banner-content h1 {
+    color: #FAFAFA;
+    max-width: 443px;
+}
+
+.banner-content .time {
+    display: flex;
+    align-items: center;
+    gap: 24px;
+}
+
+.banner-content .time h2 {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    background-color: #FAFAFA;
+    color: #000;
+    width: 62px;
+    height: 62px;
+    border-radius: 50%;
+
+}
+
+.banner-content .time h2 span {
+    color: #000;
+    font-family: "Poppins", sans-serif;
+    font-size: 11px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 18px;
+
+}
+
+.banner-content .btn {
+    background-color: #0F6;
+    margin-top: 8px;
+
+}
+
+.products-section {
+    margin-top: 71px;
+}
+
+.products-carousel {
+    margin-top: 60px;
+    margin-bottom: 60px;
+    width: 100%;
+    height: 750px;
+}
+
+.products-carousel .productSwiper {
+    width: 100%;
+    height: 100%
+}
+
+.featured-section {
+    margin-top: 140px;
+}
+
+.featured-thumbs {
+    margin-top: 60px;
+    display: flex;
+    /* flex-wrap: wrap; */
+    gap: 30px;
+    color: #FAFAFA;
+}
+
+.featured-thumbs img {
+    width: 100%;
+    height: auto;
+}
+
+.thumb-1,
+.thumb-2,
+.thumb-left,
+.thumb-3,
+.thumb-4 {
+    position: relative;
+}
+
+.featured-thumbs h3 {
+    color: #FAFAFA;
+
+    font-family: "Inter", sans-serif;
+    font-size: 24px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: 24px;
+    letter-spacing: 0.72px;
+}
+
+.featured-thumbs .thumb-description {
+    position: absolute;
+    bottom: 32px;
+    left: 32px;
+    max-width: 242px;
+    display: flex;
+    flex-direction: column;
+    gap: 16px;
+
+}
+
+.featured-thumbs .thumb-description a {
+    color: #FAFAFA;
+
+}
+
+.featured-thumbs .thumb-2 .thumb-description {
+    bottom: 66px;
+    left: 24px;
+}
+
+.thumb-right-subpart {
+    margin-top: 30px;
+    display: flex;
+    gap: 30px;
+}
+
+.featured-thumbs .thumb-3 .thumb-description,
+.thumb-4 .thumb-description {
+    bottom: 24px;
+    left: 24px;
+}
+
+
+.featured-services {
+    margin-top: 140px;
+    text-align: center;
+    display: flex;
+    gap: 88px;
+    justify-content: center;
+    align-items: center;
+}
+
+.featured-services h5 {
+    margin-top: 24px;
+}
+
+
+footer {
+    margin-top: 140px;
+    display: flex;
+    background: #000;
+    padding: 80px 0px 24px 0px;
+    flex-direction: column;
+
+    align-items: center;
+    gap: 60px;
+
+}
+
+footer .footer-logo {
+    color: #FAFAFA;
+    margin-bottom: 8px;
+
+    font-family: "Inter", sans-serif;
+    font-size: 24px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 24px;
+    /* 100% */
+    letter-spacing: 0.72px;
+}
+
+footer h5 {
+    color: #FAFAFA;
+    margin-bottom: 8px
+}
+
+footer p {
+    color: #FAFAFA;
+
+
+    font-size: 16px;
+
+    line-height: 24px;
+
+}
+
+.footer-content {
+    display: flex;
+    justify-content: space-between;
+    gap: 87px;
+    flex-wrap: wrap;
+}
+
+footer input {
+    width: 100%;
+    padding: 12px 0px 12px 16px;
+    border-radius: 4px;
+    border: 1.5px solid #FAFAFA;
+    background-color: transparent;
+    opacity: 0.7;
+    color: #FAFAFA;
+}
+
+footer .subscribe {
+    position: relative;
+}
+
+footer .subscribe img {
+    position: absolute;
+    top: 50%;
+    right: 0px;
+    transform: translateY(-50%);
+}
+
+footer .exclusive-section,
+footer .support-section,
+footer .account-section,
+footer .quick-link-section,
+footer .download-app-section {
+    display: flex;
+    flex-direction: column;
+    gap: 16px;
+}
+
+footer .support-section {
+    max-width: 175px;
+}
+
+footer .exclusive-section {
+    max-width: 217px;
+}
+
+footer a,
+.account-section ul li a {
+    color: #FAFAFA;
+    text-decoration: none;
+    display: block;
+}
+
+.account-section ul,
+.quick-link-section ul {
+    display: flex;
+    flex-direction: column;
+    list-style: none;
+    gap: 16px;
+}
+
+.download-app-section .download-links {
+    display: flex;
+    gap: 8px;
+}
+
+.download-app-section .download-links .download-btn {
+    display: flex;
+    flex-direction: column;
+    gap: 12px;
+}
+
+.download-btn img:hover {
+    cursor: pointer;
+}
+
+.download-app-section {
+    max-width: 200px !important;
+}
+
+.download-app-section p {
+    color: #FAFAFA;
+    opacity: 0.7;
+    font-family: "Poppins", sans-serif;
+    font-size: 12px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 18px;
+    /* 150% */
+}
+
+.social-links {
+    display: flex;
+    align-items: center;
+    gap: 24px;
+    margin-top: 24px;
+}
+
+.social-links img:hover{
+    transform: scale(1.2);
+}
+
 @media screen and (max-width:1200px) {
     .container {
         padding: 0 20px;
