--- a/style.css
+++ b/style.css
@@ -218,7 +218,7 @@ a {
     text-decoration-color: rgba(0, 0, 0, 0.5);
 }
 
-.navigation-menu a.visited{
+.navigation-menu a.visited {
     text-decoration: underline;
     text-underline-offset: 10px;
     text-decoration-thickness: 1px;
@@ -1210,7 +1210,7 @@ footer a,
     background: #f0bdbd !important;
 }
 
-.story-section{
+.story-section {
     margin-top: 80px;
 }
 
@@ -1227,6 +1227,11 @@ footer a,
 .about {
     margin-top: 80px;
 
+}
+
+.breadcrumb .active {
+    background-color: white !important;
+    opacity: 1 !important;
 }
 
 .breadcrumb a {
@@ -1400,6 +1405,22 @@ footer a,
 
 /* -----------------  Contact Page--------------------- */
 
+form .user-details .name-group,
+.mail-group,
+.phone-group {
+    position: relative;
+    font-family: "Poppins", sans-serif;
+    font-size: 10px;
+}
+
+form .user-details span {
+    position: absolute;
+    left: 0;
+    bottom: -15px;
+    color: red;
+    visibility: hidden;
+}
+
 .contact {
     margin-top: 80px;
 }
@@ -1457,26 +1478,26 @@ footer a,
     padding: 40px 32px 40px 31px;
     border-radius: 4px;
     background: #FFF;
-   
+
 
     box-shadow: 0px 1px 13px 0px rgba(0, 0, 0, 0.05);
 }
 
-.contact-form form{
+.contact-form form {
     display: flex;
     flex-direction: column;
     gap: 32px;
 }
 
-.contact-form form input , textarea{
- 
+.contact-form form input,
+textarea {
+
     padding: 0 16px;
     border-radius: 4px;
     background: #F5F5F5;
     height: 50px;
     border: none;
     color: #000;
-
     font-family: "Poppins", sans-serif;
     font-size: 16px;
     font-style: normal;
@@ -1487,7 +1508,7 @@ footer a,
 
 .contact-form .user-details {
     display: flex;
-    flex-wrap: wrap;
+    /* flex-wrap: wrap; */
     gap: 16px;
 }
 
@@ -1495,14 +1516,133 @@ footer a,
     width: auto;
     height: 207px;
     padding-top: 13px;
-    
+
 
 }
 
-.contact-form form .send-message-btn{
+.contact-form form .send-message-btn {
     float: right;
 }
 
+
+
+
+
+
+
+
+
+/* ----------------- signUp Page------------------- */
+
+.sign-up {
+    margin-top: 60px;
+    position: relative;
+}
+
+.sign-up-form {
+    display: flex;
+    gap: 129px;
+}
+
+.sign-up-form .img-bg {
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    top: 0;
+    width: 50%;
+}
+
+.register-form {
+    width: 371px;
+    margin-left: auto;
+    padding: 130px 0;
+
+}
+
+.sign-up-form img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.register-form p {
+    font-size: 16px;
+    padding-top: 24px;
+    font-weight: 400;
+    line-height: 24px;
+}
+
+.register-form h3 {
+
+    font-size: 36px;
+    font-weight: 500;
+    line-height: 30px;
+    letter-spacing: 1.44px;
+}
+
+.register-form form {
+    padding-top: 40px;
+    display: flex;
+    flex-direction: column;
+    gap: 40px;
+}
+
+.register-form form input:focus {
+    outline: none;
+}
+
+.register-form form input {
+    border: none;
+    height: 32px;
+    border-bottom: 0.5px rgb(0, 0, 0, 0.3) solid;
+
+
+    font-family: "Poppins";
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 24px;
+    
+}
+
+.google-sign-up-btn {
+    color: #000 !important;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 16px;
+    background-color: #F5F5F5;
+    border-radius: 4px;
+    border: 1px solid rgba(0, 0, 0, 0.40);
+    width: 100%;
+    margin-top: 16px;
+}
+
+.google-sign-up-btn img {
+    width: 24px;
+    height: 24px;
+    display: block;
+}
+
+.already-registered p {
+    padding: 0;
+
+}
+
+.already-registered {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    opacity: 0.7;
+    gap: 16px;
+    padding-top: 32px;
+}
+
+.already-registered a {
+    text-underline-offset: 5px;
+    text-decoration-thickness: 1px;
+    text-decoration-color: rgba(0, 0, 0, 0.7);
+}
 
 @media screen and (max-width: 425px) {
 
@@ -1533,7 +1673,7 @@ footer a,
 
 @media screen and (max-width:690px) {
 
-    .contact-component{
+    .contact-component {
         flex-wrap: wrap;
         justify-content: center;
     }
@@ -1726,8 +1866,21 @@ footer a,
 
 @media screen and (max-width: 1200px) {
 
+
     .contact-form form input {
         width: 100%;
+        box-sizing: border-box;
+    }
+
+    .contact-form form .user-details {
+        flex-wrap: wrap;
+        gap: 25px;
+    }
+
+    .contact-form form .name-group,
+    .mail-group,
+    .phone-group {
+        flex: 100%;
     }
 
     .full-services {
